# BellAi

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/bellai/: streamlit_app.py
src/bellai/core/: actions.py  agent.py  intention.py  memory.py
src/bellai/tools/: client_service.py  hotel_service.py  intention_service.py  navigation.py  places_service.py
tests/: simple_test.py
tests/core/: test_agent.py
