[project]
name = "bellai"
version = "0.1.0"
description = ""
authors = [
    {name = "YAHIA ABDCHAFEE Adam",email = "adam.y.abdc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "langchain-google-community (>=2.0.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "bellai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
